namespace Verwaltungssystem;

public enum Informationstyp
{
    Text,
    Image,
    Link,
    File
}